ai update: enhance URL handling and add repository guidelines