@@ -2,6 +2,7 @@ package digital.moveto.botinok.client.utils;
 
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -18,16 +19,27 @@ public class UrlUtils {
     }
 
     public static Map<String, String> splitQuery(String url) throws UnsupportedEncodingException, MalformedURLException {
-        return splitQuery(new URL(url));
+        return splitQuery(URI.create(url).toURL());
     }
 
     public static Map<String, String> splitQuery(URL url) throws UnsupportedEncodingException {
-        Map<String, String> query_pairs = new LinkedHashMap<String, String>();
+        Map<String, String> query_pairs = new LinkedHashMap<>();
         String query = url.getQuery();
+        if (query == null || query.isBlank()) {
+            return query_pairs;
+        }
         String[] pairs = query.split("&");
         for (String pair : pairs) {
+            if (pair.isBlank()) {
+                continue;
+            }
             int idx = pair.indexOf("=");
-            query_pairs.put(URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8), URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
+            String key = idx < 0 ? pair : pair.substring(0, idx);
+            String value = idx < 0 ? "" : pair.substring(idx + 1);
+            query_pairs.put(
+                    URLDecoder.decode(key, StandardCharsets.UTF_8),
+                    URLDecoder.decode(value, StandardCharsets.UTF_8)
+            );
         }
         return query_pairs;
     }
